# education

./: .gitignore  013.ts  014.ts  017.ts  019.ts  CLAUDE.md  README.md  test.rb
.github/workflows/: dependabot-pr-automerge.yml
angular/devise-token-auth/: README.md  angular.json  karma.conf.js  package-lock.json  (+1 more)
blockchain/: 001-blockchain-basics.md
cpp/01-educative-cpp-basics/: CMakeLists.txt
cpp/01-educative-cpp-basics/01-getting-started/: hello_world.cpp
cpp/01-educative-cpp-basics/02-variables-and-constants/: variable_and_constant_practice.cpp
cpp/01-educative-cpp-basics/03-data-types-and-input/: data_types.cpp  user_input.cpp
cpp/01-educative-cpp-basics/05-conditional-statements/: practice.cpp
cpp/01-educative-cpp-basics/06-loops/: practice.cpp
cpp/01-educative-cpp-basics/07-functions/: closure.cpp  function_overloading.cpp  lambda_func_as_argument.cpp  lambda_function.cpp  pass_by_ref.cpp  practice.cpp
golang/: .gitignore
haskel/: first_prog.hs  hello.hs
html/: 1.html  modernizr-custom.js  test-modernizr.html
javascript/: 001.js  002.js  003.js  004.js  005.js
job-simulations/: README.md
node-dev/: README.md  package-lock.json  package.json
perl-course/: README.md  test.rb
python/: sum_event.py
react/: note-react.md  note-redux.md
rust/educative-rust-pro-lang/: Cargo.toml
rust/educative-rust-pro-lang/src/chap01_hello_rust/: array.rs  array_safe_accessing.rs  display_output.rs  ownership.rs  tuple.rs  variables.rs
rust/educative-rust-pro-lang/src/chap02_rust_operators/: borrowing_and_dereferencing.rs  simple_borrowing_and_dereferencing.rs
rust/educative-rust-pro-lang/src/chap03_conditional/: condition.rs  if_let.rs
typescript/: 001.ts  002.ts  003.ts  004.ts  005.ts  006.ts  008.ts  009.ts  010.ts  011.ts  012.ts  015.ts  016.ts  018.ts  020.ts  20.ts
web-dev-bootcamp/: 001.html  002.html
(+4024 files in other folders)
