[package]
name = "educative-rust-pro-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "display_output"
path = "src/chap01_hello_rust/display_output.rs"

[[bin]]
name = "variables"
path = "src/chap01_hello_rust/variables.rs"

[[bin]]
name = "array"
path = "src/chap01_hello_rust/array.rs"
